--- a/tama.html
+++ b/tama.html
@@ -26,8 +26,8 @@
                     <h3 class="section-subheading text-muted">低調日系風格繪畫工作室咖啡廳</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
+                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合工作、唸書</mark></p>
+                    <p> <mark class="yellow">＃寵物友善</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃結合書籍與畫室空間</mark></p>
                     <p> <mark class="blue">Covid-19專區：即刻起暫停營業，若有趨緩跡象，再另行通知開店時間</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我們想要提供</mark>
+                    <p> <mark class="gray">玉虫画室固定提供咖啡、輕食、甜點給使用這個空間的人。這裡有許多繪畫相關的書籍給大家現場閱讀，將來還會有速寫活動以及繪畫相關的課程可以參加。</mark>
                     </br>
                     
                     </br>
