--- a/tama.html
+++ b/tama.html
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">玉虫画室固定提供咖啡、輕食、甜點給使用這個空間的人。這裡有許多繪畫相關的書籍給大家現場閱讀，將來還會有速寫活動以及繪畫相關的課程可以參加。</mark>
+                    <p> <mark class="gray">店內走的是偏日系的格局風格，結合書籍與畫室空間提供放鬆的環境。一進門的圓形魚缸牆令人看得目不轉睛，另外陳列的書籍以日本書為主，種類橫跨攝影、藝術、設計、人文等，將來還會有速寫活動以及繪畫相關的課程可以參加。</mark>
                     </br>
                     
                     </br>
