--- a/apple.html
+++ b/apple.html
@@ -23,11 +23,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Apple Cinnamon café 蘋果肉桂咖啡餐酒館</h2>
-                    <h3 class="section-subheading text-muted">  </h3>
+                    <h3 class="section-subheading text-muted">低調巷弄的美味甜點，不愛肉桂</h3>
                 </div>
                 <div class="text-center">
                     <p> <mark class="yellow">＃平日不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃午餐時段提供商業午餐</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃適合與朋友小酌聚會</mark></p>
                     <p> <mark class="blue">Covid-19專區：暫停內用，僅提供外帶、外送，同時也推出外帶優惠</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/ap_1.jpeg" alt="ap_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">店內空間大，有兩層擁餐區</div>
                             </div>
                         </div>
                     </div>
@@ -65,14 +65,14 @@
                                 <img class="img-fluid" src="assets/img/store/ap_3.jpeg" alt="ap_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">Apple Cinnamon</div>
                             </div>
                         </div>
                     </div>
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我們想要提供</mark>
+                    <p> <mark class="gray">用餐環境採美式工業風，店內的乾燥花及布置也帶有些許文藝氣息。餐點包含早午餐、義大利麵、甜點、咖啡、飲料和調酒等。</mark>
                     </br>
                     
                     </br>
