--- a/apple.html
+++ b/apple.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/ap_1.jpeg" alt="ap_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">店內空間大，有兩層擁餐區</div>
+                                <div class="portfolio-caption-subheading text-muted">店內空間大，有兩層用餐區</div>
                             </div>
                         </div>
                     </div>
