--- a/drunk.html
+++ b/drunk.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/dr_1.jpeg" alt="dr_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">洋溢著異國風情的沙發擺飾</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/dr_2.jpeg" alt="dr_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">球型玻璃溫室</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/dr_3.jpeg" alt="dr_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">手工蟹肉漢堡佐烤薯塊 $320</div>
                             </div>
                         </div>
                     </div>
