--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                                     </div>
                                     <div>
                                     <h4>永寧站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="wemay.html" target="_parent">wemay cafe韋美咖啡</a></p>
                                     </div>
                                     <div>
                                     <h4>頂埔站</h4>
