--- a/wemay.html
+++ b/wemay.html
@@ -23,12 +23,12 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">wemay cafe韋美咖啡</h2>
-                    <h3 class="section-subheading text-muted">  </h3>
+                    <h3 class="section-subheading text-muted">新的一天，都能喝到好喝的咖啡並吃的滿足</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
-                    <p> <mark class="blue">Covid-19專區：  </mark>
+                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合工作、唸書</mark></p>
+                    <p> <mark class="yellow">＃提供輕食</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
+                    <p> <mark class="blue">Covid-19專區：暫停內用，僅提供外帶、外送</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
             <div class="container">
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/wm_1.jpeg" alt="wm_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">樸實的木製傢俱環境能帶給顧客安心舒適的感受</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/wm_2.jpeg" alt="wm_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">巧克力布朗尼冰淇淋 $80</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/wm_3.jpeg" alt="wm_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">焦糖巧克力鬆餅</div>
                             </div>
                         </div>
                     </div>
@@ -87,7 +87,6 @@
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/wemaycafe/" target="_blank">LINK</a></p>
                            <p>交通：捷運永寧站1號出口步行約五分鐘</p>
-                           <p>地址：新北市土城區中央路三段153號</p>
                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3617.0226358684185!2d121.42990701500491!3d24.965344484004547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34681cda44d480e9%3A0x5968642e68f729c4!2z6Z-L576O5ZKW5ZWh!5e0!3m2!1szh-TW!2stw!4v1623902670418!5m2!1szh-TW!2stw" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            </br>
                            
