--- a/sdessert.html
+++ b/sdessert.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">S'Dessert BAR</h2>
-                    <h3 class="section-subheading text-muted">  </h3>
+                    <h3 class="section-subheading text-muted">韓系下午茶甜點咖啡廳</h3>
                 </div>
                 <div class="text-center">
                     <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合朋友聚會</mark></p>
