--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                                     </div>
                                     <div>
                                     <h4>府中站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="merci.html" target="_parent">Merci vielle咖啡館</a></p>
                                     </div>
                                     
     
