--- a/merci.html
+++ b/merci.html
@@ -28,7 +28,7 @@
                 <div class="text-center">
                     <p> <mark class="yellow">＃平日不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
                     <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
-                    <p> <mark class="blue">Covid-19專區：  </mark>
+                    <p> <mark class="blue">Covid-19專區：營業時間14:00～19:00，暫停內用，僅供外帶、外送14:00～19:00</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
             <div class="container">
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我們想要提供</mark>
+                    <p> <mark class="gray">MERCI想藉由空間呈現出寧靜、沈穩、低調的風格，店內也展示及販售我們在世界各地找到的美好事物與大家分享。在一個板橋文化老街區裡找尋老板橋的美麗風景與溫暖人情味，走上樓梯找個角落感受一杯咖啡的溫度，跟許久不見的自己碰個面。</mark>
                     </br>
                     
                     </br>
