--- a/merci.html
+++ b/merci.html
@@ -26,8 +26,8 @@
                     <h3 class="section-subheading text-muted">隱身在二樓的古物收藏老宅咖啡廳</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃平日不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
+                    <p> <mark class="yellow">＃平日不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合工作、唸書</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供付費插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
                     <p> <mark class="blue">Covid-19專區：營業時間14:00～19:00，暫停內用，僅供外帶、外送14:00～19:00</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/mv_1.jpeg" alt="mv_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">空間呈現出寧靜、沈穩、低調的風格</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/mv_3.jpeg" alt="mv_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">裝潢是走復古懷舊的二手傢俱為主</div>
                             </div>
                         </div>
                     </div>
