--- a/merci.html
+++ b/merci.html
@@ -83,7 +83,7 @@
                            <p>地址：新北市板橋區府中路50號2樓</p>
                            <p>電話：(02)8965-3906</p>
                            <p>營業時間：13:00 – 22:00（週二公休）</p>
-                           <p>菜單：<a href="  " target="_blank">LINK</a></p>
+                           <p>菜單：暫無提供</p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/mercivielle/" target="_blank">LINK</a></p>
                            <p>交通：捷運府中站3號出口步行約三分鐘</p>
