--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                                     </div>
                                     <div>
                                     <h4>新埔站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="camulet.html" target="_parent">Camulet 貓欸</a></p>
                                     </div>
                                     <div>
                                     <h4>板橋站</h4>
