--- a/camulet.html
+++ b/camulet.html
@@ -28,7 +28,7 @@
                 <div class="text-center">
                     <p> <mark class="yellow">＃建議事前訂位</mark>  <mark class="yellow">＃店貓陪吃</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
                     <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃餐點多樣</mark>   <mark class="yellow">＃推薦給喜歡貓咪的你</mark></p>
-                    <p> <mark class="blue">Covid-19專區：  </mark>
+                    <p> <mark class="blue">Covid-19專區：暫停內用，僅提供外帶、外送</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
             <div class="container">
