--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                                     </div>
                                     <div>
                                     <h4>台北車站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="gojiby.html" target="_parent">gojiby 二會</a></p>
                                     </div>
                                     
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
