--- a/simple.html
+++ b/simple.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/sp_2.jpeg" alt="sp_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">  </div>
+                                <div class="portfolio-caption-subheading text-muted">老屋改建，每一處都可看到創建者的用心</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/sp_1.jpeg" alt="sp_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">宇治丸久小山園抹茶製作的抹茶捲</div>
+                                <div class="portfolio-caption-subheading text-muted">宇治丸久抹茶製作的抹茶捲</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/sp_3.jpeg" alt="sp_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">世界冠軍咖啡師吳則霖的所經營的咖啡廳</div>
                             </div>
                         </div>
                     </div>
