--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
                                     <div>
                                     <h4>府中站</h4>
                                     <p>  <a href="merci.html" target="_parent">Merci vielle 咖啡館</a></p>
+                                    <p>  <a href="click.html" target="_parent">Click Coffee</a></p>
                                     </div>
                                     
     
