--- a/click.html
+++ b/click.html
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我們想要提供</mark>
+                    <p> <mark class="gray">堅持使用最新鮮的食材製作健康的餐點，每一杯咖啡每一個餐點都非常講究</mark>
                     </br>
                     
                     </br>
