--- a/click.html
+++ b/click.html
@@ -65,14 +65,14 @@
                                 <img class="img-fluid" src="assets/img/store/cl_3.jpeg" alt="cl_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">清將田園雞帕里尼 $150</div>
+                                <div class="portfolio-caption-subheading text-muted">青醬田園雞帕里尼 $150</div>
                             </div>
                         </div>
                     </div>
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">堅持使用最新鮮的食材製作健康的餐點，每一杯咖啡每一個餐點都非常講究</mark>
+                    <p> <mark class="gray">堅持使用最新鮮的食材製作健康的餐點，每一杯咖啡每一個餐點都非常講究。</mark>
                     </br>
                     
                     </br>
