--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                                     </div>
                                     <div>
                                     <h4>板橋站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="foliage.html" target="_parent">Foliage cafe</a></p>
                                     </div>
                                     <div>
                                     <h4>府中站</h4>
