--- a/foliage.html
+++ b/foliage.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/fl_1.jpeg" alt="fl_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">招牌 泰式奶茶鬆餅 $140</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/fl_2.jpeg" alt="fl_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">座位舒適溫馨</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/fl_3.jpeg" alt="fl_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">海南雞飯 $160</div>
                             </div>
                         </div>
                     </div>
