--- a/foliage.html
+++ b/foliage.html
@@ -86,8 +86,8 @@
                            <p>菜單：<a href="https://www.facebook.com/foliagecafe76/menu/?ref=page_internal" target="_blank">LINK</a></p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/foliagecafe76/?ref=page_internal" target="_blank">LINK</a></p>
-                           <p>交通：捷運板橋站3號出口</p>
-                           
+                           <p>交通：捷運板橋站3號出口步行約八分鐘</p>
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.671269509319!2d121.4643080144151!3d25.011283783983018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a91a347d6f1f%3A0x4c42d6db832ed9e!2sFoliage%20cafe!5e0!3m2!1szh-TW!2stw!4v1624017304953!5m2!1szh-TW!2stw" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            </br>
                            
                            </br>
