--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
                                     <div>
                                     <h4>江子翠站</h4>
                                     <p>  <a href="koya.html" target="_parent">Koya Coffee</a></p>
+                                    <p>  <a href="noote.html" target="_parent">cafe noote</a></p>
                                     </div>
                                     <div>
                                     <h4>新埔站</h4>
