--- a/noote.html
+++ b/noote.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/no_1.jpeg" alt="no_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">提拉米蘇 $140</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/no_2.jpeg" alt="no_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">清水模的建築</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/no_3.jpeg" alt="no_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">鮮奶厚片 $100 冰釀美式 $100</div>
                             </div>
                         </div>
                     </div>
