--- a/noote.html
+++ b/noote.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>cafe noote</title>
+        <title>Cafe Noote</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Scafe noote</h2>
+                    <h2 class="section-heading text-uppercase">Cafe Noote</h2>
                     <h3 class="section-subheading text-muted">選擇一款noote咖啡交換一紙訊息，在兩個圓圈裡，找到只屬於你的驚喜。</h3>
                 </div>
                 <div class="text-center">
