--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/---.jpg" alt="..." />
                                     <div>
                                     <h4>亞東醫院站</h4>
-                                    <p>  <a href="shang.html" target="_parent">---</a></p>
+                                    <p>努力開發中...</p>
                                     </div>
                                     <div>
                                     <h4>海山站</h4>
@@ -492,7 +492,7 @@
                                     </div>
                                     <div>
                                     <h4>土城站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="antler.html" target="_parent">Antler Park 路角公園</a></p>
                                     </div>
                                     <div>
                                     <h4>永寧站</h4>
