--- a/antler.html
+++ b/antler.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/an_1.jpeg" alt="an_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">鹿角公園店面外觀沈穩的黑色系搭配落地窗</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/an_2.jpeg" alt="an_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted"><p>店內座位有4人桌也有長桌，適合多位朋友一起聚餐</p></div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/an_3.jpeg" alt="an_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">爐烤蒜味迷迭香雞腿排套餐 $390</div>
                             </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                            <p>地址：新北市土城區員林街7號</p>
                            <p>電話：(02)2263-6606</p>
                            <p>營業時間：11:00-22:00</p>
-                           <p>菜單：<a href="https://www.facebook.com/antler.park/menu/?ref=page_internal" target="_blank">LINK</a></p>
+                           <p>菜單：<a href="https://www.07168.net/rwd/antlerpark/">LINK</a></p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/antler.park/?ref=page_internal" target="_blank">LINK</a></p>
                            <p>交通：捷運土城站3號出口步行約八分鐘</p>
