--- a/antler.html
+++ b/antler.html
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/an_2.jpeg" alt="an_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted"><p>店內座位有4人桌也有長桌，適合多位朋友一起聚餐</p></div>
+                                <div class="portfolio-caption-subheading text-muted"><p>店內座位有4人桌也有長桌，適合朋友聚餐</p></div>
                             </div>
                         </div>
                     </div>
