--- a/antler.html
+++ b/antler.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/an_1.jpeg" alt="an_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">鹿角公園店面外觀沈穩的黑色系搭配落地窗</div>
+                                <div class="portfolio-caption-subheading text-muted">店面以外觀沈穩的黑色系搭配落地窗</div>
                             </div>
                         </div>
                     </div>
