--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h3 class="text-uppercase">南港-信義</h3>
-                                    <p class="item-intro text-muted">捷運南港展覽館站-捷運市政府站</p>
+                                    <h3 class="text-uppercase">捷運南港展覽館站-捷運市政府站</h3>
+                                    <p class="item-intro text-muted">本月精選 - 後山咖啡（昆陽站）</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/test wallpaper.png" alt="..." />
                                     <div>
                                     <h4>南港展覽館站</h4>
@@ -340,7 +340,7 @@
                                     </div>
                                     <div>
                                     <h4>後山埤站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>努力開發中...</p>
                                     </div>
                                     <div>
                                     <h4>永春站</h4>
