--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/01thum.jpeg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">南港-信義</div>
-                                <div class="portfolio-caption-subheading text-muted">南港展覽館站-市政府站</div>
+                                <div class="portfolio-caption-heading">南港展覽館站-市政府站</div>
+                                <div class="portfolio-caption-subheading text-muted">本月精選-後山咖啡（昆陽站）</div>
                             </div>
                         </div>
                     </div>
@@ -322,8 +322,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h3 class="text-uppercase">捷運南港展覽館站-捷運市政府站</h3>
-                                    <p class="item-intro text-muted">本月精選 - 後山咖啡（昆陽站）</p>
+                                    <h3 class="text-uppercase">南港-信義</h3>
+                                    <p class="item-intro text-muted">捷運南港展覽館站-捷運市政府站/p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/test wallpaper.png" alt="..." />
                                     <div>
                                     <h4>南港展覽館站</h4>
