--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/01thum.jpeg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">南港展覽館站-市政府站</div>
-                                <div class="portfolio-caption-subheading text-muted">本月精選-後山咖啡（昆陽站）</div>
+                                <div class="portfolio-caption-heading">南港-信義</div>
+                                <div class="portfolio-caption-subheading text-muted">南港展覽館站-市政府站</div>
                             </div>
                         </div>
                     </div>
@@ -324,7 +324,8 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">南港-信義</h3>
                                     <p class="item-intro text-muted">捷運南港展覽館站-捷運市政府站/p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/test wallpaper.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01thum.jpeg" alt="..." />
+                                    <p>本月精選 - 後山咖啡（昆陽站）</p>
                                     <div>
                                     <h4>南港展覽館站</h4>
                                     <p>  <a href="coppii.html" target="_parent">CoppiiLumii 冉冉生活</a></p>
