--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">南港-信義</h3>
-                                    <p class="item-intro text-muted">捷運南港展覽館站-捷運市政府站/p>
+                                    <p class="item-intro text-muted">捷運南港展覽館站-捷運市政府站</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01thum.jpeg" alt="..." />
                                     <p>本月精選 - 後山咖啡（昆陽站）</p>
                                     <div>
