--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-hastag fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-hashtag fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Hastag</h4>
-                        <p class="text-muted">客製化資訊：將店家提供的服務內容及特色標上在網頁最上方。</p>
+                        <h4 class="my-3">Hashtag</h4>
+                        <p class="text-muted">客製化資訊：將店家提供的服務內容及特色標記在網頁最上方。</p>
                     </div>
                 </div>
             </div>
