--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
                                     <div>
                                     <h4>西門站</h4>
                                     <p>  <a href="shang.html" target="_parent">上上咖啡</a></p>
+                                    <p>  <a href="cho.html" target="_parent">CHO CAFE 町‧如固咖啡</a></p>
                                     </div>
                                     <div>
                                     <h4>龍山寺站</h4>
@@ -501,7 +502,7 @@
                                     </div>
                                     <div>
                                     <h4>頂埔站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>開發中...</p>
                                     </div>
                                     </div>
                                     
