--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                             <div class="timeline-body"><p class="text-muted">
                             <p>  西門站 <a href="shang.html" target="_parent">上上咖啡</a></p>
                             <p>  國父紀念館站 <a href="simple.html" target="_parent">Simple Kaffa 興波咖啡</a></p>
+                            <p>  國父紀念館站 <a href="cho.html" target="_parent">CHO CAFE 町‧如固咖啡</a></p>
                             </p></div>
                         </div>
                     </li>
