--- a/cho.html
+++ b/cho.html
@@ -28,7 +28,7 @@
                 <div class="text-center">
                     <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃單品手沖</mark>   <mark class="yellow">＃適合工作、唸書</mark></p>
                     <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
-                    <p> <mark class="blue">Covid-19專區：暫停內用，僅供外帶</mark>
+                    <p> <mark class="blue">Covid-19專區：營業時間11:00-19:00暫停內用，僅供外帶</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
             <div class="container">
