--- a/dreamers.html
+++ b/dreamers.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/dm_1.jpeg" alt="dm_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">提供了最適合配咖啡的各式麵包與貝果</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/dm_2.jpeg" alt="dm_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">草莓優格龍捲風 $150</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/dm_3.jpeg" alt="dm_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">座位舒適、皆有插座可使用</div>
                             </div>
                         </div>
                     </div>
@@ -80,13 +80,13 @@
                 
                 <div class="text-center">
                            <h4>Information</h4>
-                           <p>地址：</p>
+                           <p>地址：台北市大安區復興南路一段135巷7號1F</p>
                            <p>電話：(02)2752-8229</p>
                            <p>營業時間：07:00-22:00</p>
                            <p>菜單：<a href="https://www.google.com/maps/uv?pb=!1s0x3442abdbf9f7f733%3A0x261d1d35ca51bb11!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipOtq67TPRc0VKUkfnW6V6yO2t6OLnclAiB37tHL%3Dw86-h87-n-k-no!5sDreamers%20Coffee%20Roasters%20-%20Google%20%E6%90%9C%E5%B0%8B!15sCgIYIQ&imagekey=!1e10!2sAF1QipOw-RTv40mLZRmosCun5FLzVcz6gEu1A2VoBS3E&hl=zh-TW" target="_blank">LINK</a></p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/DreamersCoffeeRoasters/" target="_blank">LINK</a></p>
-                           <p>交通：捷運忠孝復興站5好出口步行約一分鐘</p>
+                           <p>交通：捷運忠孝復興站5號出口步行約一分鐘</p>
                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.7446789090473!2d121.54248431424097!3d25.042737383968245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abdbf9f7f733%3A0x261d1d35ca51bb11!2zRHJlYW1lcnMgQ29mZmVlIFJvYXN0ZXJzIOW-qeiIiOW6lw!5e0!3m2!1szh-TW!2stw!4v1624112691232!5m2!1szh-TW!2stw" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            </br>
                            
