--- a/mkcr.html
+++ b/mkcr.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">MKCR 山小孩</h2>
-                    <h3 class="section-subheading text-muted">北門古蹟的純白色台北咖啡廳在城市裡的，白色慢步調，融合現代與百年舊往</h3>
+                    <h3 class="section-subheading text-muted">北門古蹟的純白色台北咖啡廳：在城市裡的，白色慢步調，融合現代與百年舊往</h3>
                 </div>
                 <div class="text-center">
                     <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/mk_1.jpeg" alt="mk_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">白淨的風格在這充滿歷史味道的北門一帶顯得特別亮眼</div>
                             </div>
                         </div>
                     </div>
