--- a/mkcr.html
+++ b/mkcr.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/mk_1.jpeg" alt="mk_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">白淨的風格在這充滿歷史味道的北門一帶顯得特別亮眼</div>
+                                <div class="portfolio-caption-subheading text-muted">白淨的風格在一排老房子中顯得亮眼</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/mk_2.jpeg" alt="mk_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">氛圍清新又溫馨</div>
+                                <div class="portfolio-caption-subheading text-muted">以白色為主體，搭配木質調的桌椅與地板</div>
                             </div>
                         </div>
                     </div>
