--- a/mkcr.html
+++ b/mkcr.html
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">這裡的一切跟過去有一點像，又有一點不一樣。唯一不變的是對咖啡的初衷，還是那樣單純地執著。歡迎您來認識新的我們，也許仍就還有一點點您熟悉的味道。</mark>
+                    <p> <mark class="gray">二樓窗景細嚐百年北門故事這裡的一切跟過去有一點像，又有一點不一樣。唯一不變的是對咖啡的初衷，還是那樣單純地執著。歡迎您來認識新的我們，也許仍就還有一點點您熟悉的味道。</mark>
                     </br>
                     
                     </br>
